# computational-physics

./: .coverage  README.md  pyproject.toml
01_firstnumericalproblem/: radioactivedecay.py
10_QuantumMechanics/: shooting_and_matching.py
2_RealisticProjectileMotion/: bicycle.py  projectile.py
src/01_firstnumericalproblem/: radioactivedecay.py
src/computational_physics/: console.py
src/computational_physics/01_firstnumericalproblem/: freefall.py  radioactivedecay.py
