[tool.poetry]
name = "computational-physics"
version = "0.1.0"
authors = ["anthonynault"]
description = "Promblems in Computationl Physics by Nicholas J. Girordano and Hisao Nakanishi"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/anthonynault/computational-physics"
repository = "https://github.com/anthonynault/computational-physics"
keywords = ["computational physics"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.3.3"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
computational-physics = "computational_physics.console:main"
