[tool.poetry]
name = "computational-physics"
version = "0.1.0"
authors = ["anthonynault"]
description = "Promblems in Computationl Physics by Nicholas J. Girordano and Hisao Nakanishi"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/anthonynault/computational-physics"
repository = "https://github.com/anthonynault/computational-physics"
keywords = ["computational physics"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["computational_physics"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
computational-physics = "computational_physics.console:main"
